# 5lia0

./: .bash_history  .gitignore  Dockerfile  qr_code_generator.py
misc/temp_ws/src/image_pipeline/: CMakeLists.txt  package.xml
project/: 1build.sh  21motor_control_launch.sh  2motor_driver_launch.sh  4camera_launch.sh  5tracking_launch.sh  99controller_launch.sh  conda-requirements.txt  ocr_server.py  requirements.txt  test.txt
project/src/controller_package/: CMakeLists.txt
project/src/controller_package/launch/: motion_planning_controller_node.launch
project/src/controller_package/msg/: MovementRequest.msg
project/src/controller_package/src/: motion_planning_controller_node.py
project/src/darknet/: CMakeLists.txt  package.xml
project/src/darknet/launch/: darknet.launch
project/src/darknet/src/: darknet_node.py
project/src/darknet/src/darknet/: Makefile  darknet  darknet.py  test.py  uselib
project/src/darknet/src/darknet/cfg/: coco-ros.data
project/src/helper/: CMakeLists.txt  package.xml  setup.py
project/src/helper/src/helper/: enums.py
project/src/jetson_camera/: CMakeLists.txt  package.xml
project/src/jetson_camera/config/: parameters.yaml
project/src/jetson_camera/launch/: camera.launch  load_params.launch  object_tracker.launch  ocr_processing.launch  qr_code.launch  tracker.launch
project/src/jetson_camera/msg/: QRTrackingInfo.msg  TrackingInfo.msg
project/src/jetson_camera/src/: camera_publisher_node.py  camera_subscriber_node.py  img_processor_node.py  levenshtein.py  object_tracker_node.py  ocr_img_processor.py  qr_code_node.py
project/src/motor_control_package/: CMakeLists.txt  package.xml
project/src/motor_control_package/launch/: motor_control.launch
project/src/motor_control_package/src/: config.py  config.yml  datatypes.py  motion_planning_node.py  test_publisher.py  tofDriver.py  tof_node.py
project/src/motor_driver_package/: CMakeLists.txt  package.xml
project/src/motor_driver_package/launch/: everything.launch  fusion_node.launch
project/src/motor_driver_package/msg/: EncoderData.msg
project/src/motor_driver_package/src/: config.py  config.yml  datatypes.py  encoder_reader_node.py  fusion_node.py  motorDriver.py  motor_driver_node.py  position_estimator_node.py  receiver_node.py
project/src/safety/: CMakeLists.txt  package.xml
project/src/safety/launch/: publisher.launch  safety.launch
project/src/safety/src/: enums.py  safety_node.py  test_publisher.py
project/src/tof/: CMakeLists.txt  package.xml
project/src/tof/launch/: tof.launch
project/src/tof/src/: main.py  tof_node.py
workshop3_1561111/: launch.sh
workshop3_1561111/src/controller_package/src/: controller_node.py
workshop3_1561111/src/jetson_camera/: CMakeLists.txt
workshop3_1561111/src/jetson_camera/launch/: everything.launch
workshop3_1561111/src/jetson_camera/msg/: QRCodes.msg
workshop3_1561111/src/jetson_camera/src/: camera_subscriber_node.py  camera_subscriber_node_undistorted.py  img_processor_node.py  qr_code_node.py
workshop3_1561111/src/motor_driver_package/launch/: motor_driver_node.launch  receiver_node.launch
workshop3_1561111/src/motor_driver_package/src/: config.yml  encoderDriver.py  encoder_reader_node.py  motor_driver_node.py  receiver_node.py
workshop4_1/: build.sh  launch.sh
workshop4_1/src/: datatypes.py
workshop4_1/src/config/: config.py  config.yml
workshop4_1/src/controller_package/: CMakeLists.txt  package.xml
workshop4_1/src/controller_package/config/: config.py  config.yml
workshop4_1/src/controller_package/drivers/: main.py
workshop4_1/src/controller_package/msg/: MovementRequest.msg
workshop4_1/src/controller_package/src/: controller_node.py  template_node.py
workshop4_1/src/motor_driver_package/: CMakeLists.txt
workshop4_1/src/motor_driver_package/launch/: motor_driver_node.launch
workshop4_1/src/motor_driver_package/msg/: EncoderData.msg  MotorSpeedRequest.msg  MovementRequest.msg  PIDData.msg
workshop4_1/src/motor_driver_package/src/: .encoder_reader_node.py.swp  config.py  config.yml  datatypes.py  encoder_reader_node.py  hat.py  motor_driver_node.py  pose_estimator_node.py  position_estimator_node.py  receiver_node.py
workshop4_1/src/msg/: PIDData.msg  Pose.msg
workshop4_1662147/: docker_launch.sh  jetson_launch.sh  lane_detection.avi
workshop4_1662147/src/controller_package/launch/: controller_node.launch  template_node.launch
workshop4_1662147/src/jetson_camera/: CMakeLists.txt
workshop4_1662147/src/jetson_camera/launch/: camera.launch  img_processor.launch  lane_detection.launch
workshop4_1662147/src/jetson_camera/msg/: Lanes.msg
workshop4_1662147/src/jetson_camera/src/: img_processor_node.py  lane_detection_node.py
workshop4_1662147/src/motor_driver_package/src/: config.yml
workshop4_1671952/: camera_launch.sh  controller_launch.sh  darknet_launch.sh  img_processor_launch.sh  receiver_launch.sh
workshop4_1671952/src/controller_package/src/: controller_node.py
workshop4_1671952/src/jetson_camera/: CMakeLists.txt
workshop4_1671952/src/jetson_camera/launch/: camera_subscriber.launch  darknet.launch
workshop4_1671952/src/jetson_camera/src/: camera_subscriber_node.py  camera_subscriber_node_old.py  darknet_node.py
workshop4_1671952/src/motor_driver_package/src/: receiver_node.py
workshop4_1671952/src/template_package/: CMakeLists.txt
workshop4_1710303/src/controller_package/src/: controller_node.py
workshop4_1710303/src/jetson_camera/: CMakeLists.txt  package.xml
workshop4_1710303/src/jetson_camera/config/: parameters.yaml
workshop4_1710303/src/jetson_camera/launch/: everything.launch
workshop4_1710303/src/jetson_camera/msg/: ObjectPosition.msg
workshop4_1710303/src/src/: .img_processor_node.py.swp  camera_subscriber_node.py  img_processor_node.py
workshop4_1710303/src/template_package/: package.xml
workshop4_vlad/: img_process_launch.sh  ocr_server.py  test.py  test_client.py
workshop4_vlad/src/: launch.sh
workshop4_vlad/src/jetson_camera/: CMakeLists.txt
yolo/: custom.yaml
yolo/runs/detect/rc_car_model/: args.yaml  (+1 more)
(+26 files in other folders)
